# hello-vite

./: .gitignore  deploy-client.bat  deploy-server.bat  deploy.bat  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  tsconfig.node.json  tsconfig.worker.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
server/: index.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: MessageDisplay.tsx  MessageSender.tsx
src/store/: useMessageStore.ts
src/worker/: index.ts
worker/: index.ts  wrangler.jsonc
